# learning-rust

./: .gitignore  LICENSE  README.md
100-exercises-to-learn-rust/: README.md
100-exercises-to-learn-rust/exercises/02_basic_calculator/06_while/src/: lib.rs
100-exercises-to-learn-rust/exercises/02_basic_calculator/07_for/src/: lib.rs
100-exercises-to-learn-rust/exercises/02_basic_calculator/08_overflow/src/: lib.rs
100-exercises-to-learn-rust/exercises/02_basic_calculator/09_saturating/src/: lib.rs
100-exercises-to-learn-rust/exercises/02_basic_calculator/10_as_casting/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/01_struct/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/02_validation/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/04_visibility/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/05_encapsulation/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/07_setters/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/09_heap/src/: lib.rs
100-exercises-to-learn-rust/exercises/03_ticket_v1/12_outro/src/: lib.rs
actix-web-blog/: Cargo.toml  Makefile.toml
actix-web-blog/migrations/2022-11-07-123403_create_posts/: up.sql
actix-web-blog/src/: error.rs  main.rs  repository.rs
actix-web-diesel/: .env  Cargo.toml  README.md  docker-compose.yml
actix-web-diesel/migrations/2023-05-03-063451_create_users/: up.sql
actix-web-diesel/migrations/2023-05-03-063654_create_articles/: up.sql
actix-web-diesel/migrations/2023-05-03-063759_create_tags/: up.sql
actix-web-diesel/src/: constants.rs  error.rs  main.rs  routes.rs  schema.rs
actix-web-diesel/src/app/: mod.rs
actix-web-diesel/src/app/article/: handler.rs  mod.rs  model.rs  request.rs  response.rs  service.rs
actix-web-diesel/src/app/comment/: handler.rs  model.rs  request.rs  response.rs  service.rs
actix-web-diesel/src/app/favorite/: handler.rs  mod.rs  model.rs  service.rs
actix-web-diesel/src/app/follow/: handler.rs  model.rs
actix-web-diesel/src/app/healthcheck/: handler.rs
actix-web-diesel/src/app/profile/: api.rs  handler.rs  model.rs  response.rs
actix-web-diesel/src/app/tag/: handler.rs  model.rs  response.rs
actix-web-diesel/src/app/user/: api.rs  handler.rs  model.rs  request.rs  response.rs
actix-web-diesel/src/middleware/: auth.rs  cors.rs  mod.rs  state.rs
actix-web-diesel/src/utils/: db.rs  hasher.rs  mod.rs  token.rs  uuid.rs
add/: Cargo.toml
add/add-two/src/: lib.rs
add/adder/: Cargo.toml
add/adder/src/: main.rs
adder/src/: lib.rs
adder/tests/: integration_test.rs
adder/tests/common/: mod.rs
axum-http-auth/: Cargo.toml  README.md  docker-compose.yml
axum-http-auth/src/: config.rs
axum-sqlx/: .env  Cargo.toml  README.md  docker-compose.yml
axum-sqlx/migrations/: 1_setup.sql  2_user.sql  3_follow.sql  4_article.sql
axum-sqlx/src/: config.rs  lib.rs  main.rs
axum-sqlx/src/http/: error.rs  extractor.rs  mod.rs  profiles.rs  types.rs  users.rs
axum-sqlx/src/http/articles/: listing.rs  mod.rs
axum_http_auth/: Cargo.toml
axum_http_auth/src/: lib.rs  main.rs  views.rs
blog_os/: Cargo.toml  README.md
blog_os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
blog_os/src/allocator/: bump.rs  linked_list.rs
blog_os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
blog_os/tests/: basic_boot.rs  heap_allocation.rs  stack_overflow.rs
future/: Cargo.toml  README.md
future/src/: main.rs
guessing_game/src/: main.rs
helloworld/: README.md
helloworld/src/: main.rs
minigrep/: README.md
minigrep/src/: lib.rs  main.rs
rust_by_example/: README.md
rust_by_example/conversion/src/: main.rs
rust_by_example/custom_types/src/: main.rs
rust_by_example/hello/src/: main.rs
rust_by_example/primitives/src/: main.rs
rust_by_example/types/src/: main.rs
rust_by_example/variable_bindings/src/: main.rs
rust_lang_book/: Cargo.toml  README.md
rust_lang_book/docs/: cargo.md  collections.md  concurrency.md  enum.md  error_handling.md  functional_features.md  generics.md  lifetime.md  more_about_cargo.md  object_oriented_programming.md  ownership.md  package_crate_module.md  patterns.md  rust_basic_syntax.md  smart_pointers.md  struct.md  testing.md
rust_lang_book/src/: lib.rs  main.rs
rustwi/: .env  Cargo.toml  README.md  docker-compose.yml
rustwi/sql/: table.sql
rustwi/src/: constants.rs  controllers.rs  database.rs  entities.rs  lib.rs  main.rs  repos.rs  repos_impl.rs  request.rs  response.rs  services.rs  views.rs
rustwi/src/controllers/: accounts.rs  root.rs  tweets.rs
rustwi/src/entities/: account.rs  tweet.rs
rustwi/src/repos/: accounts.rs  tweets.rs
rustwi/src/repos_impl/: accounts.rs  tweets.rs
rustwi/src/services/: accounts.rs  tweets.rs
rustwi/src/views/: home.rs
rustwi/src/views/partial/: tweet.rs
rustwi/templates/: _tweet.html  base.html  home.html  sign_in.html  sign_up.html
scratch_ctrlc/: Cargo.toml  README.md
scratch_ctrlc/examples/: example.rs
scratch_ctrlc/src/: error.rs  lib.rs  signal.rs  tests.rs
scratch_ctrlc/src/platform/: mod.rs
scratch_ctrlc/src/platform/unix/: mod.rs
scratch_ctrlc/src/platform/windows/: mod.rs
signal_handling/: Cargo.toml  README.md
signal_handling/src/: main.rs
tokio-tutorial/: Cargo.toml  README.md
tokio-tutorial/examples/: hello-redis.rs
tokio-tutorial/src/: main.rs
try_anyhow/: Cargo.toml  README.md  cluster.json
try_anyhow/src/: main.rs
try_thiserror/: Cargo.toml  README.md
try_thiserror/src/: main.rs
webserver/: README.md
webserver/src/: lib.rs  main.rs
