[package]
name = "actix-web-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
actix-web = "4.3.1"
actix-cors = "0.6.4"

# ORM and Query Builder
diesel = { version = "2.0.4", features = ["r2d2", "postgres", "chrono", "uuid", "serde_json"] }

# serialization / deserialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# encode and decode JWTs
jsonwebtoken = "8.3.0"

# hash and verify password
bcrypt = "0.14.0"

# deta and time libray
chrono = { version = "0.4.24", features = ["serde"] }

# generate and parse UUIDs
uuid = { version = "1.3.2", features = ["serde", "v4"] }

# Flexible concrete Error type build on std::error::Error
anyhow = "1.0.71"

# derive(Error)
thiserror = "1.0.40"

# lightweight logging facade
log = "0.4.17"
env_logger = "0.10.0"

# futures and streams featuring
futures = "0.3.28"

# dotenv
dotenvy = "0.15.7"

# Convert strings into any case
convert_case = "0.6.0"
