[package]
name = "axum-http-auth"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web Framework
axum = { version = "0.6.18", features = ["http2"] }

# Middleware:
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

# Async Runtime
tokio = { version = "1.28.0", features = ["full"] }
tokio-postgres = "0.7.8"

# Database
bb8 = "0.8.0"
bb8-postgres = "0.8.1"

# Session:
axum-sessions = "0.5.0"
async-redis-session = "0.2.2"

# Password Hash
rust-argon2 = "1.0.0"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Errors
thiserror = "1.0.40"

# Environment Variables
envy = "0.4.2"

# Serialization / Deserialization
serde = { version = "1.0.160", features = ["derive"] }

# Template
askama = "0.12.0"

# Validation
validator = { version = "0.16.0", features = ["derive"] }

# Utils
rand = { version = "0.8.5", features = ["min_const_gen"] }
