[package]
name = "axum-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Core dependencies

sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

# Utility Crates
anyhow = "1.0.71"
env_logger = "0.10.0"
envy = "0.4.2"
serde = "1.0.160"
dotenvy = "0.15.7"
