[package]
name = "rustwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
askama = "0.12"
serde = { version = "1.0.160", features = ["derive"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.24", features = ["serde"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4"] }
