[package]
name = "scratch_ctrlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "signal"]}

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.45", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_WindowsProgramming", "Win32_System_Console"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.45", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_SystemServices", "Win32_System_Console"] }

[features]
termination = []

[[test]]
harness = false
name = "tests"
path = "src/tests.rs"
